fixup animations and improve readability

--- a/apps/fui/src/styles/local/partials/2-components/minimalist-sidebar/minimalist-sidebar.scss
+++ b/apps/fui/src/styles/local/partials/2-components/minimalist-sidebar/minimalist-sidebar.scss
@@ -6,12 +6,9 @@
 @import 'nav-links.scss';
 
 .minimalist-sidebar {
-    // smoky glass
-    background-color: rgba(10, 10, 10, 0.4);
     // defined in layouts to ensure smoother animations
     width: var(--sidebar-width);
     // sidebar is always visible over all other layers except the overlay
-    z-index: var(--layers-sidebar);
     height: 100vh;
 
     display: flex;
@@ -39,7 +36,7 @@
     .top-section,
     .social-links {
         // default color when inactive - this colour is set to something more readable once expanded
-        background-color: rgba(10, 10, 10, 0.4);
+        background-color: transparent;
         border-radius: 12px;
         position: relative;
     }
@@ -89,6 +86,8 @@
         .page-links,
         .top-section,
         .social-links {
+            // for readability
+            background-color: var(--background-details);
             padding: $spacing-06;
         }
     }
@@ -118,9 +117,9 @@
         .page-links,
         .top-section,
         .social-links {
+            // for readability
+            background-color: var(--background-details);
             padding: $spacing-06;
-            // smoky glass
-            background-color: var(--foreground-details);
         }
     }
 
